TALM/Couillard/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    ENUM
    GOTO
    POUND
    QUESTION
    SIZEOF
    STRUCT
    TIMES
    UNION

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     external_declaration -> block_statement
Rule 6     function_definition -> declaration_specifiers declarator compound_statement
Rule 7     function_definition -> declarator compound_statement
Rule 8     declaration_specifiers -> storage_class_specifier
Rule 9     declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 10    declaration_specifiers -> type_specifier
Rule 11    declaration_specifiers -> type_specifier declaration_specifiers
Rule 12    declaration_specifiers -> type_qualifier
Rule 13    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 14    type_specifier -> VOID
Rule 15    type_specifier -> CHAR
Rule 16    type_specifier -> INT
Rule 17    type_specifier -> FLOAT
Rule 18    type_specifier -> DOUBLE
Rule 19    type_specifier -> SHORT
Rule 20    type_specifier -> LONG
Rule 21    type_specifier -> SIGNED
Rule 22    type_specifier -> UNSIGNED
Rule 23    storage_class_specifier -> TYPEDEF
Rule 24    storage_class_specifier -> EXTERN
Rule 25    storage_class_specifier -> STATIC
Rule 26    storage_class_specifier -> AUTO
Rule 27    storage_class_specifier -> REGISTER
Rule 28    storage_class_specifier -> TREB_PAROUT
Rule 29    type_qualifier -> CONST
Rule 30    type_qualifier -> VOLATILE
Rule 31    type_qualifier_list -> type_qualifier
Rule 32    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 33    declarator -> direct_declarator
Rule 34    declarator -> pointer declarator
Rule 35    pointer -> ASTERISK
Rule 36    pointer -> ASTERISK type_qualifier_list
Rule 37    pointer -> ASTERISK pointer
Rule 38    pointer -> ASTERISK type_qualifier_list pointer
Rule 39    declaration_list -> declaration
Rule 40    declaration_list -> declaration_list declaration
Rule 41    declaration -> declaration_specifiers SEMICOLON
Rule 42    declaration -> declaration_specifiers init_declarator_list SEMICOLON
Rule 43    init_declarator_list -> init_declarator
Rule 44    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 45    init_declarator -> declarator
Rule 46    init_declarator -> declarator ASSIGN initializer
Rule 47    initializer -> assignment_expression
Rule 48    initializer -> LBRACE initializer_list RBRACE
Rule 49    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 50    initializer_list -> initializer
Rule 51    initializer_list -> initializer_list COMMA initializer
Rule 52    compound_statement -> LBRACE RBRACE
Rule 53    compound_statement -> LBRACE statement_list RBRACE
Rule 54    compound_statement -> LBRACE declaration_list RBRACE
Rule 55    compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 56    statement_list -> statement
Rule 57    statement_list -> statement_list statement
Rule 58    statement -> labeled_statement
Rule 59    statement -> super_statement
Rule 60    statement -> compound_statement
Rule 61    statement -> expression_statement
Rule 62    statement -> selection_statement
Rule 63    statement -> iteration_statement
Rule 64    statement -> jump_statement
Rule 65    labeled_statement -> CASE constant_expression COLON statement
Rule 66    labeled_statement -> DEFAULT COLON statement
Rule 67    expression_statement -> SEMICOLON
Rule 68    expression_statement -> expression SEMICOLON
Rule 69    selection_statement -> IF LPAREN expression RPAREN statement
Rule 70    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 71    selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 72    jump_statement -> RETURN SEMICOLON
Rule 73    jump_statement -> RETURN expression SEMICOLON
Rule 74    jump_statement -> BREAK SEMICOLON
Rule 75    jump_statement -> CONTINUE SEMICOLON
Rule 76    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 77    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 78    iteration_statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 79    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 80    expression -> assignment_expression
Rule 81    expression -> expression COMMA assignment_expression
Rule 82    assignment_expression -> conditional_expression
Rule 83    assignment_expression -> unary_expression ASSIGN assignment_expression
Rule 84    assignment_expression -> unary_expression EQ_PLUS assignment_expression
Rule 85    assignment_expression -> unary_expression EQ_MINUS assignment_expression
Rule 86    assignment_expression -> unary_expression EQ_TIMES assignment_expression
Rule 87    assignment_expression -> unary_expression EQ_DIV assignment_expression
Rule 88    assignment_expression -> unary_expression EQ_MODULO assignment_expression
Rule 89    assignment_expression -> unary_expression EQ_SHIFT_LEFT assignment_expression
Rule 90    assignment_expression -> unary_expression EQ_SHIFT_RIGHT assignment_expression
Rule 91    assignment_expression -> unary_expression EQ_AMPERSAND assignment_expression
Rule 92    assignment_expression -> unary_expression EQ_CARET assignment_expression
Rule 93    assignment_expression -> unary_expression EQ_PIPE assignment_expression
Rule 94    constant_expression -> conditional_expression
Rule 95    conditional_expression -> logical_or_expression
Rule 96    logical_or_expression -> logical_and_expression
Rule 97    logical_or_expression -> logical_or_expression DOUBLE_PIPE logical_and_expression
Rule 98    logical_and_expression -> inclusive_or_expression
Rule 99    logical_and_expression -> logical_and_expression DOUBLE_AMPERSAND inclusive_or_expression
Rule 100   inclusive_or_expression -> exclusive_or_expression
Rule 101   inclusive_or_expression -> inclusive_or_expression PIPE exclusive_or_expression
Rule 102   exclusive_or_expression -> and_expression
Rule 103   exclusive_or_expression -> exclusive_or_expression CARET and_expression
Rule 104   and_expression -> equality_expression
Rule 105   and_expression -> and_expression AMPERSAND equality_expression
Rule 106   equality_expression -> relational_expression
Rule 107   equality_expression -> equality_expression EQ relational_expression
Rule 108   equality_expression -> equality_expression NOT_EQ relational_expression
Rule 109   relational_expression -> shift_expression
Rule 110   relational_expression -> relational_expression LESS shift_expression
Rule 111   relational_expression -> relational_expression GREATER shift_expression
Rule 112   relational_expression -> relational_expression LESS_EQ shift_expression
Rule 113   relational_expression -> relational_expression GREATER_EQ shift_expression
Rule 114   shift_expression -> additive_expression
Rule 115   shift_expression -> shift_expression SHIFT_LEFT additive_expression
Rule 116   shift_expression -> shift_expression SHIFT_RIGHT additive_expression
Rule 117   additive_expression -> mult_expression
Rule 118   additive_expression -> additive_expression PLUS mult_expression
Rule 119   additive_expression -> additive_expression MINUS mult_expression
Rule 120   mult_expression -> cast_expression
Rule 121   mult_expression -> mult_expression ASTERISK cast_expression
Rule 122   mult_expression -> mult_expression DIV cast_expression
Rule 123   mult_expression -> mult_expression MODULO cast_expression
Rule 124   cast_expression -> unary_expression
Rule 125   unary_expression -> postfix_expression
Rule 126   unary_expression -> DOUBLE_PLUS unary_expression
Rule 127   unary_expression -> DOUBLE_MINUS unary_expression
Rule 128   unary_expression -> AMPERSAND cast_expression
Rule 129   unary_expression -> ASTERISK cast_expression
Rule 130   unary_expression -> PLUS cast_expression
Rule 131   unary_expression -> MINUS cast_expression
Rule 132   unary_expression -> TILDE cast_expression
Rule 133   unary_expression -> EXCLAMATION cast_expression
Rule 134   postfix_expression -> primary_expression
Rule 135   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 136   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 137   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 138   postfix_expression -> postfix_expression DOUBLE_PLUS
Rule 139   postfix_expression -> postfix_expression DOUBLE_MINUS
Rule 140   primary_expression -> ID
Rule 141   primary_expression -> INUMBER
Rule 142   primary_expression -> FNUMBER
Rule 143   primary_expression -> CHARACTER
Rule 144   primary_expression -> string_literal
Rule 145   primary_expression -> LPAREN expression RPAREN
Rule 146   string_literal -> STRING
Rule 147   string_literal -> string_literal STRING
Rule 148   direct_declarator -> ID
Rule 149   direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 150   direct_declarator -> direct_declarator LPAREN RPAREN
Rule 151   direct_declarator -> LPAREN declarator RPAREN
Rule 152   direct_declarator -> direct_declarator LBRACKET constant_expression RBRACKET
Rule 153   direct_declarator -> direct_declarator LBRACKET RBRACKET
Rule 154   parameter_type_list -> parameter_list
Rule 155   parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 156   parameter_list -> parameter_declaration
Rule 157   parameter_list -> parameter_list COMMA parameter_declaration
Rule 158   parameter_declaration -> declaration_specifiers declarator
Rule 159   parameter_declaration -> declaration_specifiers
Rule 160   argument_expression_list -> assignment_expression
Rule 161   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 162   super_statement -> TREB_SUPER SINGLE super_input_statement super_output_statement SUPERBODY
Rule 163   super_statement -> TREB_SUPER PARALLEL super_input_statement super_output_statement SUPERBODY
Rule 164   super_statement -> TREB_SUPER REDUCE INPUT LPAREN super_input_list RPAREN OUTPUT LPAREN super_output_list RPAREN SUPERBODY
Rule 165   super_output_statement -> OUTPUT LPAREN super_output_list RPAREN
Rule 166   super_output_statement -> <empty>
Rule 167   super_output_list -> ID
Rule 168   super_output_list -> super_output_list COMMA ID
Rule 169   super_input_statement -> INPUT LPAREN super_input_list RPAREN
Rule 170   super_input_statement -> <empty>
Rule 171   super_input_list -> parout_expression
Rule 172   super_input_list -> super_input_list COMMA parout_expression
Rule 173   parout_expression -> super_input_id COLON COLON INUMBER
Rule 174   parout_expression -> super_input_id COLON COLON ASTERISK
Rule 175   parout_expression -> super_input_id COLON COLON MYTID
Rule 176   parout_expression -> super_input_id
Rule 177   parout_expression -> super_input_id COLON COLON LPAREN MYTID mytid_op INUMBER RPAREN
Rule 178   parout_expression -> super_input_id COLON COLON LASTTID
Rule 179   mytid_op -> PLUS
Rule 180   mytid_op -> MINUS
Rule 181   super_input_id -> ID
Rule 182   super_input_id -> LOCAL DOT ID
Rule 183   super_input_id -> STARTER DOT ID
Rule 184   block_statement -> BLOCK

Terminals, with rules where they appear

AMPERSAND            : 105 128
ARROW                : 
ASSIGN               : 46 83
ASTERISK             : 35 36 37 38 121 129 174
AUTO                 : 26
BLOCK                : 184
BREAK                : 74
CARET                : 103
CASE                 : 65
CHAR                 : 15
CHARACTER            : 143
COLON                : 65 66 173 173 174 174 175 175 177 177 178 178
COMMA                : 44 49 51 81 155 157 161 168 172
CONST                : 29
CONTINUE             : 75
DEFAULT              : 66
DIV                  : 122
DO                   : 79
DOT                  : 182 183
DOUBLE               : 18
DOUBLE_AMPERSAND     : 99
DOUBLE_MINUS         : 127 139
DOUBLE_PIPE          : 97
DOUBLE_PLUS          : 126 138
ELLIPSIS             : 155
ELSE                 : 70
ENUM                 : 
EQ                   : 107
EQ_AMPERSAND         : 91
EQ_CARET             : 92
EQ_DIV               : 87
EQ_MINUS             : 85
EQ_MODULO            : 88
EQ_PIPE              : 93
EQ_PLUS              : 84
EQ_SHIFT_LEFT        : 89
EQ_SHIFT_RIGHT       : 90
EQ_TIMES             : 86
EXCLAMATION          : 133
EXTERN               : 24
FLOAT                : 17
FNUMBER              : 142
FOR                  : 77 78
GOTO                 : 
GREATER              : 111
GREATER_EQ           : 113
ID                   : 140 148 167 168 181 182 183
IF                   : 69 70
INPUT                : 164 169
INT                  : 16
INUMBER              : 141 173 177
LASTTID              : 178
LBRACE               : 48 49 52 53 54 55
LBRACKET             : 137 152 153
LESS                 : 110
LESS_EQ              : 112
LOCAL                : 182
LONG                 : 20
LPAREN               : 69 70 71 76 77 78 79 135 136 145 149 150 151 164 164 165 169 177
MINUS                : 119 131 180
MODULO               : 123
MYTID                : 175 177
NOT_EQ               : 108
OUTPUT               : 164 165
PARALLEL             : 163
PIPE                 : 101
PLUS                 : 118 130 179
POUND                : 
QUESTION             : 
RBRACE               : 48 49 52 53 54 55
RBRACKET             : 137 152 153
REDUCE               : 164
REGISTER             : 27
RETURN               : 72 73
RPAREN               : 69 70 71 76 77 78 79 135 136 145 149 150 151 164 164 165 169 177
SEMICOLON            : 41 42 67 68 72 73 74 75 79
SHIFT_LEFT           : 115
SHIFT_RIGHT          : 116
SHORT                : 19
SIGNED               : 21
SINGLE               : 162
SIZEOF               : 
STARTER              : 183
STATIC               : 25
STRING               : 146 147
STRUCT               : 
SUPERBODY            : 162 163 164
SWITCH               : 71
TILDE                : 132
TIMES                : 
TREB_PAROUT          : 28
TREB_SUPER           : 162 163 164
TYPEDEF              : 23
UNION                : 
UNSIGNED             : 22
VOID                 : 14
VOLATILE             : 30
WHILE                : 76 79
error                : 

Nonterminals, with rules where they appear

additive_expression  : 114 115 116 118 119
and_expression       : 102 103 105
argument_expression_list : 135 161
assignment_expression : 47 80 81 83 84 85 86 87 88 89 90 91 92 93 160 161
block_statement      : 5
cast_expression      : 120 121 122 123 128 129 130 131 132 133
compound_statement   : 6 7 60
conditional_expression : 82 94
constant_expression  : 65 152
declaration          : 4 39 40
declaration_list     : 40 54 55
declaration_specifiers : 6 9 11 13 41 42 158 159
declarator           : 6 7 34 45 46 151 158
direct_declarator    : 33 149 150 152 153
equality_expression  : 104 105 107 108
exclusive_or_expression : 100 101 103
expression           : 68 69 70 71 73 76 77 79 81 137 145
expression_statement : 61 77 77 78 78
external_declaration : 1 2
function_definition  : 3
inclusive_or_expression : 98 99 101
init_declarator      : 43 44
init_declarator_list : 42 44
initializer          : 46 50 51
initializer_list     : 48 49 51
iteration_statement  : 63
jump_statement       : 64
labeled_statement    : 58
logical_and_expression : 96 97 99
logical_or_expression : 95 97
mult_expression      : 117 118 119 121 122 123
mytid_op             : 177
parameter_declaration : 156 157
parameter_list       : 154 155 157
parameter_type_list  : 149
parout_expression    : 171 172
pointer              : 34 37 38
postfix_expression   : 125 135 136 137 138 139
primary_expression   : 134
relational_expression : 106 107 108 110 111 112 113
selection_statement  : 62
shift_expression     : 109 110 111 112 113 115 116
statement            : 56 57 65 66 69 70 70 71 76 77 78 79
statement_list       : 53 55 57
storage_class_specifier : 8 9
string_literal       : 144 147
super_input_id       : 173 174 175 176 177 178
super_input_list     : 164 169 172
super_input_statement : 162 163
super_output_list    : 164 165 168
super_output_statement : 162 163
super_statement      : 59
translation_unit     : 2 0
type_qualifier       : 12 13 31 32
type_qualifier_list  : 32 36 38
type_specifier       : 10 11
unary_expression     : 83 84 85 86 87 88 89 90 91 92 93 124 126 127

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) external_declaration -> . block_statement
    (6) function_definition -> . declaration_specifiers declarator compound_statement
    (7) function_definition -> . declarator compound_statement
    (41) declaration -> . declaration_specifiers SEMICOLON
    (42) declaration -> . declaration_specifiers init_declarator_list SEMICOLON
    (184) block_statement -> . BLOCK
    (8) declaration_specifiers -> . storage_class_specifier
    (9) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (10) declaration_specifiers -> . type_specifier
    (11) declaration_specifiers -> . type_specifier declaration_specifiers
    (12) declaration_specifiers -> . type_qualifier
    (13) declaration_specifiers -> . type_qualifier declaration_specifiers
    (33) declarator -> . direct_declarator
    (34) declarator -> . pointer declarator
    (23) storage_class_specifier -> . TYPEDEF
    (24) storage_class_specifier -> . EXTERN
    (25) storage_class_specifier -> . STATIC
    (26) storage_class_specifier -> . AUTO
    (27) storage_class_specifier -> . REGISTER
    (28) storage_class_specifier -> . TREB_PAROUT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . SHORT
    (20) type_specifier -> . LONG
    (21) type_specifier -> . SIGNED
    (22) type_specifier -> . UNSIGNED
    (29) type_qualifier -> . CONST
    (30) type_qualifier -> . VOLATILE
    (148) direct_declarator -> . ID
    (149) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (150) direct_declarator -> . direct_declarator LPAREN RPAREN
    (151) direct_declarator -> . LPAREN declarator RPAREN
    (152) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (153) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (35) pointer -> . ASTERISK
    (36) pointer -> . ASTERISK type_qualifier_list
    (37) pointer -> . ASTERISK pointer
    (38) pointer -> . ASTERISK type_qualifier_list pointer

    BLOCK           shift and go to state 8
    TYPEDEF         shift and go to state 14
    EXTERN          shift and go to state 15
    STATIC          shift and go to state 16
    AUTO            shift and go to state 17
    REGISTER        shift and go to state 18
    TREB_PAROUT     shift and go to state 19
    VOID            shift and go to state 20
    CHAR            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    SHORT           shift and go to state 25
    LONG            shift and go to state 26
    SIGNED          shift and go to state 27
    UNSIGNED        shift and go to state 28
    CONST           shift and go to state 29
    VOLATILE        shift and go to state 30
    ID              shift and go to state 31
    LPAREN          shift and go to state 32
    ASTERISK        shift and go to state 33

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    block_statement                shift and go to state 5
    declaration_specifiers         shift and go to state 6
    declarator                     shift and go to state 7
    storage_class_specifier        shift and go to state 9
    type_specifier                 shift and go to state 10
    type_qualifier                 shift and go to state 11
    direct_declarator              shift and go to state 12
    pointer                        shift and go to state 13

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) external_declaration -> . block_statement
    (6) function_definition -> . declaration_specifiers declarator compound_statement
    (7) function_definition -> . declarator compound_statement
    (41) declaration -> . declaration_specifiers SEMICOLON
    (42) declaration -> . declaration_specifiers init_declarator_list SEMICOLON
    (184) block_statement -> . BLOCK
    (8) declaration_specifiers -> . storage_class_specifier
    (9) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (10) declaration_specifiers -> . type_specifier
    (11) declaration_specifiers -> . type_specifier declaration_specifiers
    (12) declaration_specifiers -> . type_qualifier
    (13) declaration_specifiers -> . type_qualifier declaration_specifiers
    (33) declarator -> . direct_declarator
    (34) declarator -> . pointer declarator
    (23) storage_class_specifier -> . TYPEDEF
    (24) storage_class_specifier -> . EXTERN
    (25) storage_class_specifier -> . STATIC
    (26) storage_class_specifier -> . AUTO
    (27) storage_class_specifier -> . REGISTER
    (28) storage_class_specifier -> . TREB_PAROUT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . SHORT
    (20) type_specifier -> . LONG
    (21) type_specifier -> . SIGNED
    (22) type_specifier -> . UNSIGNED
    (29) type_qualifier -> . CONST
    (30) type_qualifier -> . VOLATILE
    (148) direct_declarator -> . ID
    (149) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (150) direct_declarator -> . direct_declarator LPAREN RPAREN
    (151) direct_declarator -> . LPAREN declarator RPAREN
    (152) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (153) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (35) pointer -> . ASTERISK
    (36) pointer -> . ASTERISK type_qualifier_list
    (37) pointer -> . ASTERISK pointer
    (38) pointer -> . ASTERISK type_qualifier_list pointer

    BLOCK           shift and go to state 8
    TYPEDEF         shift and go to state 14
    EXTERN          shift and go to state 15
    STATIC          shift and go to state 16
    AUTO            shift and go to state 17
    REGISTER        shift and go to state 18
    TREB_PAROUT     shift and go to state 19
    VOID            shift and go to state 20
    CHAR            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    SHORT           shift and go to state 25
    LONG            shift and go to state 26
    SIGNED          shift and go to state 27
    UNSIGNED        shift and go to state 28
    CONST           shift and go to state 29
    VOLATILE        shift and go to state 30
    ID              shift and go to state 31
    LPAREN          shift and go to state 32
    ASTERISK        shift and go to state 33

    external_declaration           shift and go to state 34
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    block_statement                shift and go to state 5
    declaration_specifiers         shift and go to state 6
    declarator                     shift and go to state 7
    storage_class_specifier        shift and go to state 9
    type_specifier                 shift and go to state 10
    type_qualifier                 shift and go to state 11
    direct_declarator              shift and go to state 12
    pointer                        shift and go to state 13

state 2

    (1) translation_unit -> external_declaration .

    BLOCK           reduce using rule 1 (translation_unit -> external_declaration .)
    TYPEDEF         reduce using rule 1 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 1 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 1 (translation_unit -> external_declaration .)
    AUTO            reduce using rule 1 (translation_unit -> external_declaration .)
    REGISTER        reduce using rule 1 (translation_unit -> external_declaration .)
    TREB_PAROUT     reduce using rule 1 (translation_unit -> external_declaration .)
    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 1 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 1 (translation_unit -> external_declaration .)
    LONG            reduce using rule 1 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 1 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 1 (translation_unit -> external_declaration .)
    CONST           reduce using rule 1 (translation_unit -> external_declaration .)
    VOLATILE        reduce using rule 1 (translation_unit -> external_declaration .)
    ID              reduce using rule 1 (translation_unit -> external_declaration .)
    LPAREN          reduce using rule 1 (translation_unit -> external_declaration .)
    ASTERISK        reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    BLOCK           reduce using rule 3 (external_declaration -> function_definition .)
    TYPEDEF         reduce using rule 3 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 3 (external_declaration -> function_definition .)
    STATIC          reduce using rule 3 (external_declaration -> function_definition .)
    AUTO            reduce using rule 3 (external_declaration -> function_definition .)
    REGISTER        reduce using rule 3 (external_declaration -> function_definition .)
    TREB_PAROUT     reduce using rule 3 (external_declaration -> function_definition .)
    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 3 (external_declaration -> function_definition .)
    SHORT           reduce using rule 3 (external_declaration -> function_definition .)
    LONG            reduce using rule 3 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 3 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 3 (external_declaration -> function_definition .)
    CONST           reduce using rule 3 (external_declaration -> function_definition .)
    VOLATILE        reduce using rule 3 (external_declaration -> function_definition .)
    ID              reduce using rule 3 (external_declaration -> function_definition .)
    LPAREN          reduce using rule 3 (external_declaration -> function_definition .)
    ASTERISK        reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    BLOCK           reduce using rule 4 (external_declaration -> declaration .)
    TYPEDEF         reduce using rule 4 (external_declaration -> declaration .)
    EXTERN          reduce using rule 4 (external_declaration -> declaration .)
    STATIC          reduce using rule 4 (external_declaration -> declaration .)
    AUTO            reduce using rule 4 (external_declaration -> declaration .)
    REGISTER        reduce using rule 4 (external_declaration -> declaration .)
    TREB_PAROUT     reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 4 (external_declaration -> declaration .)
    SHORT           reduce using rule 4 (external_declaration -> declaration .)
    LONG            reduce using rule 4 (external_declaration -> declaration .)
    SIGNED          reduce using rule 4 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 4 (external_declaration -> declaration .)
    CONST           reduce using rule 4 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 4 (external_declaration -> declaration .)
    ID              reduce using rule 4 (external_declaration -> declaration .)
    LPAREN          reduce using rule 4 (external_declaration -> declaration .)
    ASTERISK        reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) external_declaration -> block_statement .

    BLOCK           reduce using rule 5 (external_declaration -> block_statement .)
    TYPEDEF         reduce using rule 5 (external_declaration -> block_statement .)
    EXTERN          reduce using rule 5 (external_declaration -> block_statement .)
    STATIC          reduce using rule 5 (external_declaration -> block_statement .)
    AUTO            reduce using rule 5 (external_declaration -> block_statement .)
    REGISTER        reduce using rule 5 (external_declaration -> block_statement .)
    TREB_PAROUT     reduce using rule 5 (external_declaration -> block_statement .)
    VOID            reduce using rule 5 (external_declaration -> block_statement .)
    CHAR            reduce using rule 5 (external_declaration -> block_statement .)
    INT             reduce using rule 5 (external_declaration -> block_statement .)
    FLOAT           reduce using rule 5 (external_declaration -> block_statement .)
    DOUBLE          reduce using rule 5 (external_declaration -> block_statement .)
    SHORT           reduce using rule 5 (external_declaration -> block_statement .)
    LONG            reduce using rule 5 (external_declaration -> block_statement .)
    SIGNED          reduce using rule 5 (external_declaration -> block_statement .)
    UNSIGNED        reduce using rule 5 (external_declaration -> block_statement .)
    CONST           reduce using rule 5 (external_declaration -> block_statement .)
    VOLATILE        reduce using rule 5 (external_declaration -> block_statement .)
    ID              reduce using rule 5 (external_declaration -> block_statement .)
    LPAREN          reduce using rule 5 (external_declaration -> block_statement .)
    ASTERISK        reduce using rule 5 (external_declaration -> block_statement .)
    $end            reduce using rule 5 (external_declaration -> block_statement .)


state 6

    (6) function_definition -> declaration_specifiers . declarator compound_statement
    (41) declaration -> declaration_specifiers . SEMICOLON
    (42) declaration -> declaration_specifiers . init_declarator_list SEMICOLON
    (33) declarator -> . direct_declarator
    (34) declarator -> . pointer declarator
    (43) init_declarator_list -> . init_declarator
    (44) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (148) direct_declarator -> . ID
    (149) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (150) direct_declarator -> . direct_declarator LPAREN RPAREN
    (151) direct_declarator -> . LPAREN declarator RPAREN
    (152) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (153) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (35) pointer -> . ASTERISK
    (36) pointer -> . ASTERISK type_qualifier_list
    (37) pointer -> . ASTERISK pointer
    (38) pointer -> . ASTERISK type_qualifier_list pointer
    (45) init_declarator -> . declarator
    (46) init_declarator -> . declarator ASSIGN initializer

    SEMICOLON       shift and go to state 36
    ID              shift and go to state 31
    LPAREN          shift and go to state 32
    ASTERISK        shift and go to state 33

    declarator                     shift and go to state 35
    init_declarator_list           shift and go to state 37
    direct_declarator              shift and go to state 12
    pointer                        shift and go to state 13
    init_declarator                shift and go to state 38

state 7

    (7) function_definition -> declarator . compound_statement
    (52) compound_statement -> . LBRACE RBRACE
    (53) compound_statement -> . LBRACE statement_list RBRACE
    (54) compound_statement -> . LBRACE declaration_list RBRACE
    (55) compound_statement -> . LBRACE declaration_list statement_list RBRACE

    LBRACE          shift and go to state 40

    compound_statement             shift and go to state 39

state 8

    (184) block_statement -> BLOCK .

    BLOCK           reduce using rule 184 (block_statement -> BLOCK .)
    TYPEDEF         reduce using rule 184 (block_statement -> BLOCK .)
    EXTERN          reduce using rule 184 (block_statement -> BLOCK .)
    STATIC          reduce using rule 184 (block_statement -> BLOCK .)
    AUTO            reduce using rule 184 (block_statement -> BLOCK .)
    REGISTER        reduce using rule 184 (block_statement -> BLOCK .)
    TREB_PAROUT     reduce using rule 184 (block_statement -> BLOCK .)
    VOID            reduce using rule 184 (block_statement -> BLOCK .)
    CHAR            reduce using rule 184 (block_statement -> BLOCK .)
    INT             reduce using rule 184 (block_statement -> BLOCK .)
    FLOAT           reduce using rule 184 (block_statement -> BLOCK .)
    DOUBLE          reduce using rule 184 (block_statement -> BLOCK .)
    SHORT           reduce using rule 184 (block_statement -> BLOCK .)
    LONG            reduce using rule 184 (block_statement -> BLOCK .)
    SIGNED          reduce using rule 184 (block_statement -> BLOCK .)
    UNSIGNED        reduce using rule 184 (block_statement -> BLOCK .)
    CONST           reduce using rule 184 (block_statement -> BLOCK .)
    VOLATILE        reduce using rule 184 (block_statement -> BLOCK .)
    ID              reduce using rule 184 (block_statement -> BLOCK .)
    LPAREN          reduce using rule 184 (block_statement -> BLOCK .)
    ASTERISK        reduce using rule 184 (block_statement -> BLOCK .)
    $end            reduce using rule 184 (block_statement -> BLOCK .)


state 9
